tests/NormalTests/paczka1/fuzzy1/44438208.err
Error in line 10: vr5LjN A977 54,39
Error in line 3: ZSoX5F1 A977 33,7
Error in line 17: 3cdLrinZ0 S41 81,5
Error in line 32: XvzDWE S41 37,9
Error in line 39: S1 A977 ,6
